[package]
name = "jnix"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>"]
edition = "2018"

[features]
derive = ["jnix-macros"]

[dependencies]
log = "0.4"
jni = { git = "https://github.com/mullvad/jni-rs", branch = "separate-get-static-field-lifetimes" }
jnix-macros = { version = "0.1", optional = true, path = "../jnix-macros" }
once_cell = "1"
parking_lot = "0.9"
